# user-service-aws

./: .gitignore  README.md  cdk.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/unit/: test_stack.py
user_service_aws/: app.py  autoscaling.py  cloudwatch.py  service.py  stack.py  storage.py  userservice.yaml
